project('YAML-GLib', 'c', 'vala',
        version: '0.1.1')

glib = dependency('glib-2.0', version: '>=2.32')
gobject = dependency('gobject-2.0', version: '>=2.32')
gmodule = dependency('gmodule-2.0', version: '>=2.32')
yaml = dependency('yaml-0.1', version: '>=0.1.4')

subdir('src')
subdir('tests')
